--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,136 @@
+aiofiles==23.2.1
+altair==5.1.2
+anyio==3.7.1
+appdirs==1.4.4
+attrs==23.1.0
+beautifulsoup4==4.11.1
+blinker==1.7.0
+bokeh==3.2.0
+cachetools==5.3.2
+certifi==2023.5.7
+cffi==1.16.0
+chardet==3.0.4
+charset-normalizer==3.1.0
+click==8.1.5
+contourpy==1.1.0
+cryptography==41.0.4
+cycler==0.11.0
+decorator==4.4.2
+et-xmlfile==1.1.0
+fastapi==0.104.0
+ffmpy==0.3.1
+filelock==3.12.4
+fonttools==4.42.1
+frozendict==2.3.8
+fsspec==2023.10.0
+gitdb==4.0.11
+GitPython==3.1.40
+googletrans==3.0.0
+gradio==3.50.2
+gradio_client==0.6.1
+gTTS==2.3.2
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2023.1.1
+html5lib==1.1
+httpcore==0.9.1
+httpx==0.13.3
+huggingface-hub==0.17.3
+hyperframe==5.2.0
+idna==2.10
+imageio==2.31.6
+imageio-ffmpeg==0.4.9
+importlib-metadata==6.8.0
+importlib-resources==6.1.0
+jellyfish==1.0.1
+Jinja2==3.1.2
+joblib==1.3.1
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+kiwisolver==1.4.5
+lxml==4.9.3
+mangum==0.17.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+mdurl==0.1.2
+moviepy==1.0.3
+multitasking==0.0.11
+networkx==3.2.1
+nltk==3.8.1
+numpy==1.26.1
+opencv-python==4.8.0.74
+openpyxl==3.1.2
+openvino==2023.1.0
+openvino-telemetry==2023.2.1
+orjson==3.9.9
+packaging==23.1
 pandas==1.5.1
+pandas-stubs==2.1.1.230928
+Pillow==10.0.0
+proglog==0.1.10
+protobuf==4.25.0
+psutil @ file:///private/tmp/python-psutil-20231015-5378-1ng7p6p/psutil-5.9.6
+pyarrow==14.0.0
+pycparser==2.21
+pydantic==1.10.12
+pydeck==0.8.1b0
+pydub==0.25.1
+Pygments==2.16.1
+pyparsing==3.1.1
+PyPDF2==3.0.1
+PyQt3D==5.15.5
+PyQt5==5.15.7
+PyQt5-sip==12.11.0
+PyQtChart==5.15.6
+PyQtDataVisualization==5.15.5
+PyQtNetworkAuth==5.15.5
+PyQtPurchasing==5.15.5
+PyQtWebEngine==5.15.6
+python-dateutil==2.8.2
+python-multipart==0.0.6
+pytz==2023.3
+pywatchman==1.4.1
+PyYAML==6.0
+referencing==0.30.2
+regex==2023.6.3
+requests==2.31.0
+rfc3986==1.5.0
+rich==13.6.0
+rpds-py==0.10.6
+safetensors==0.4.0
+scapy==2.5.0
+segtok==1.5.11
+semantic-version==2.10.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.4.1
+starlette==0.27.0
+streamlit==1.28.1
+tabulate==0.9.0
+TBB @ file:///private/tmp/tbb-20230914-5829-qem3f9/oneTBB-2021.10.0/python
+tenacity==8.2.3
+tokenizers==0.14.1
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.2
+tqdm==4.65.0
+transformers==4.34.1
+types-pytz==2023.3.1.1
+types-requests==2.31.0.10
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
+urllib3==2.0.7
+uvicorn==0.23.2
+validators==0.22.0
+watchdog==3.0.0
+webencodings==0.5.1
+websockets==11.0.3
+xmltodict==0.13.0
+xyzservices==2023.5.0
+yake==0.4.8
 yfinance==0.2.18
+zipp==3.17.0
