--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ altair==5.1.2
 anyio==3.7.1
 appdirs==1.4.4
 attrs==23.1.0
+bcrypt==4.0.1
 beautifulsoup4==4.11.1
 blinker==1.7.0
 bokeh==3.2.0
@@ -16,7 +17,9 @@ contourpy==1.1.0
 cryptography==41.0.4
 cycler==0.11.0
 decorator==4.4.2
+deprecation==2.1.0
 et-xmlfile==1.1.0
+extra-streamlit-components==0.1.60
 fastapi==0.104.0
 ffmpy==0.3.1
 filelock==3.12.4
@@ -78,6 +81,7 @@ pydantic==1.10.12
 pydeck==0.8.1b0
 pydub==0.25.1
 Pygments==2.16.1
+PyJWT==2.8.0
 pyparsing==3.1.1
 PyPDF2==3.0.1
 PyQt3D==5.15.5
@@ -109,6 +113,8 @@ sniffio==1.3.0
 soupsieve==2.4.1
 starlette==0.27.0
 streamlit==1.28.1
+streamlit-authenticator==0.2.3
+streamlit-modal==0.1.0
 tabulate==0.9.0
 TBB @ file:///private/tmp/tbb-20230914-5829-qem3f9/oneTBB-2021.10.0/python
 tenacity==8.2.3
