--- a/requirements.txt
+++ b/requirements.txt
@@ -131,6 +131,7 @@ tzdata==2023.3
 tzlocal==5.2
 urllib3==2.0.7
 uvicorn==0.23.2
+vaderSentiment==3.3.2
 validators==0.22.0
 watchdog==3.0.0
 webencodings==0.5.1
